# VideoTestApp

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/videotestapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/videotestapp/: BaseActivity.java  MainActivity.java
app/src/main/java/com/example/videotestapp/util/: PermissionUtil.java  RotationUtil.java  StatusBarUtil.java  TimeUtil.java
app/src/main/res/drawable/: full_screen_icon.xml  pause_icon.xml  play_icon.xml  seekbar_progress_drawable.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/videotestapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/assets/: abdroidd ABI与CPU架构.txt
nativelib/src/main/cpp/: CMakeLists.txt  audio_channel.cpp  audio_channel.h  native_lib.cpp  native_lib.h  video_channel.cpp  video_channel.h
nativelib/src/main/java/com/example/nativelib/: IMediaPlayer.java  YYAudioTrack.java  YYCamera.java  YYMediaCodec.java  YYPlayer.java
nativelib/src/main/java/com/example/nativelib/iface/: IYYMediaCodec.java  IYYPlayer.java
